--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -6,11 +6,16 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+ disabled={loading}
 node_modules
 dist
 dist-ssr
 *.local
+.env
+.env.*.local
+.DS_Store
+/prisma/dev.db
+/prisma/dev.db-journal
 
 # Editor directories and files
 .vscode/*
